--- a/Impl/mpi/CMakeLists.txt
+++ b/Impl/mpi/CMakeLists.txt
@@ -8,7 +8,11 @@ target_link_libraries(chase_mpi
                               linalg_internal_mpi 
                               mpi_grid 
                               distMatrix)
-target_include_directories(chase_mpi INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_include_directories(chase_mpi INTERFACE 
+                                               $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+                                               "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/Impl/mpi>")
+
 target_compile_definitions(chase_mpi INTERFACE NO_MPI=0)
 
 if(CHASE_ENABLE_MPI_IO)
@@ -23,3 +27,12 @@ if(TARGET scalapackpp)
   target_compile_definitions(chase_mpi INTERFACE HAS_SCALAPACK=1 )
 endif()
 
+install(TARGETS chase_mpi
+  EXPORT chase_targets
+  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/Impl
+  FILES_MATCHING
+    PATTERN "*.hpp"
+)
