--- a/Impl/nccl/CMakeLists.txt
+++ b/Impl/nccl/CMakeLists.txt
@@ -12,7 +12,13 @@ target_link_libraries(chase_nccl
                               linalg_internal_nccl                              
                               mpi_grid_nccl 
                               distMatrix_gpu)
-target_include_directories(chase_nccl INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_include_directories(chase_nccl INTERFACE 
+                                               $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+                                               $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/Impl>
+                                               "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/Impl/nccl>"
+                                               "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/config>")
+
 target_compile_definitions(chase_nccl INTERFACE NO_MPI=0)
 
 if(CHASE_ENABLE_MPI_IO)
@@ -27,3 +33,17 @@ if(TARGET scalapackpp)
   target_compile_definitions(chase_nccl INTERFACE HAS_SCALAPACK=1 )
 endif()
 
+install(TARGETS chase_nccl
+  EXPORT chase_targets
+  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/Impl
+  FILES_MATCHING
+    PATTERN "*.hpp"
+)
+
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/Impl/config DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  FILES_MATCHING
+    PATTERN "*.hpp"
+)
