--- a/linalg/CMakeLists.txt
+++ b/linalg/CMakeLists.txt
@@ -1,22 +1,78 @@
 add_library(linalg_internal_cpu INTERFACE)
-target_include_directories(linalg_internal_cpu INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/internal/cpu)
+target_include_directories(linalg_internal_cpu INTERFACE 
+                                               $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/internal/cpu>
+                                               "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/linalg/internal/cpu>")
+
+install(TARGETS linalg_internal_cpu
+  EXPORT chase_targets
+  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(DIRECTORY internal/cpu DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/linalg/internal
+  FILES_MATCHING
+    PATTERN "*.hpp"
+)
 
 add_library(matrix INTERFACE)
-target_include_directories(matrix INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/matrix)
+target_include_directories(matrix INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/matrix>
+                                            "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/linalg/matrix>")
+
 target_link_libraries(matrix INTERFACE blaspp lapackpp linalg_internal_cpu)
+
+install(TARGETS matrix
+  EXPORT chase_targets
+  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(DIRECTORY matrix DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/linalg
+  FILES_MATCHING
+    PATTERN "*.hpp"
+)
 
 add_library(distMatrix INTERFACE)
 find_package(MPI)
 if(MPI_FOUND)
-add_library(linalg_internal_mpi INTERFACE)
-target_include_directories(linalg_internal_mpi INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/internal/mpi)
-target_link_libraries(linalg_internal_mpi INTERFACE MPI::MPI_CXX)
-target_include_directories(distMatrix INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/distMatrix)
-target_link_libraries(distMatrix INTERFACE blaspp lapackpp linalg_internal_mpi)
+  add_library(linalg_internal_mpi INTERFACE)
+  target_include_directories(linalg_internal_mpi INTERFACE 
+                                                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/internal/mpi>
+                                                "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/linalg/internal/mpi>")
+  target_link_libraries(linalg_internal_mpi INTERFACE MPI::MPI_CXX)
+  target_include_directories(distMatrix INTERFACE 
+                                                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/distMatrix>
+                                                "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/linalg/distMatrix>")
+
+  target_link_libraries(distMatrix INTERFACE blaspp lapackpp linalg_internal_mpi)
 endif()
 
 if(TARGET scalapackpp)
   target_link_libraries(distMatrix INTERFACE scalapackpp)
+endif()
+
+if(MPI_FOUND)
+  install(TARGETS linalg_internal_mpi
+    EXPORT chase_targets
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  )
+
+  install(DIRECTORY internal/mpi DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/linalg/internal
+    FILES_MATCHING
+      PATTERN "*.hpp"
+  )
+
+  install(FILES
+      ${CMAKE_CURRENT_SOURCE_DIR}/internal/typeTraits.hpp
+      DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/linalg/internal
+  )
+
+  install(TARGETS distMatrix
+    EXPORT chase_targets
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  )
+
+  install(DIRECTORY distMatrix DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/linalg
+    FILES_MATCHING
+      PATTERN "*.hpp"
+  ) 
 endif()
 
 include(CheckLanguage)
@@ -62,37 +118,83 @@ if(CMAKE_CUDA_COMPILER)
 	  		                 PROPERTIES
 		  		                          CUDA_RESOLVE_DEVICE_SYMBOLS ON
 	                                  CUDA_SEPARABLE_COMPILATION ON)
-  target_include_directories(
-      chase_cuda_kernels
-      INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/internal/cuda>)
 
+  target_include_directories(chase_cuda_kernels INTERFACE 
+                                                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/internal/cuda>
+                                                "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/linalg/internal/cuda>")
+                                                
   target_include_directories( chase_cuda_kernels INTERFACE
       ${CUDA_INCLUDE_DIRS})
 
   target_link_libraries(chase_cuda_kernels INTERFACE CUDA::cudart CUDA::curand)
 
+  install(TARGETS chase_cuda_kernels
+    EXPORT chase_targets
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  )
+
+  install(DIRECTORY internal/cuda DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/linalg/internal
+    FILES_MATCHING
+      PATTERN "*.hpp"
+      PATTERN "*.cuh"
+  )
+
   add_library(linalg_internal_cuda INTERFACE)
-  target_include_directories(linalg_internal_cuda INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/internal/cuda)
+  target_include_directories(linalg_internal_cuda INTERFACE 
+                                                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/internal/cuda>
+                                                "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/linalg/internal/cuda>")
   target_link_libraries(linalg_internal_cuda INTERFACE chase_cuda_kernels)
 
+  install(TARGETS linalg_internal_cuda
+    EXPORT chase_targets
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  )
+
   add_library(matrix_gpu INTERFACE)
-  target_include_directories(matrix_gpu INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/matrix)
+  target_include_directories(matrix_gpu INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/matrix>
+                                              "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/linalg/matrix>")
   target_link_libraries(matrix_gpu INTERFACE blaspp lapackpp linalg_internal_cpu)
 
   target_link_libraries(matrix_gpu INTERFACE cublaspp cusolverpp linalg_internal_cuda)
   target_compile_definitions(matrix_gpu INTERFACE HAS_CUDA=1)
 
+  install(TARGETS matrix_gpu
+    EXPORT chase_targets
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  )
+
   add_library(distMatrix_gpu INTERFACE)
-  target_include_directories(distMatrix_gpu INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/distMatrix)
+  target_include_directories(distMatrix_gpu INTERFACE 
+                                                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/distMatrix>
+                                                "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/linalg/distMatrix>")
   target_link_libraries(distMatrix_gpu INTERFACE blaspp lapackpp  linalg_internal_mpi)
   target_link_libraries(distMatrix_gpu INTERFACE cublaspp cusolverpp linalg_internal_cuda)
   target_compile_definitions(distMatrix_gpu INTERFACE HAS_CUDA=1)
 
+  install(TARGETS distMatrix_gpu
+    EXPORT chase_targets
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  )
+
   if(TARGET mpi_grid_nccl)
     add_library(linalg_internal_nccl INTERFACE)
-    target_include_directories(linalg_internal_nccl INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/internal/nccl)
+    target_include_directories(linalg_internal_nccl INTERFACE 
+                                                  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/internal/nccl>
+                                                  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/linalg/internal/nccl>")
     target_link_libraries(linalg_internal_nccl INTERFACE mpi_grid_nccl linalg_internal_cuda)
+
+    install(TARGETS linalg_internal_nccl
+      EXPORT chase_targets
+      INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    )
+
+    install(DIRECTORY internal/nccl DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/linalg/internal
+      FILES_MATCHING
+        PATTERN "*.hpp"
+    )
+
   endif()
-  else()
+else()
   message(STATUS "No CUDA support")
 endif()
