--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -1,11 +1,11 @@
 @PACKAGE_INIT@
 
+include(CMakeFindDependencyMacro)
 
+# Find dependencies
+#find_dependency(BLAS REQUIRED)
+#find_dependency(LAPACK REQUIRED)
+#find_dependency(MPI)
 
-include("${CMAKE_CURRENT_LIST_DIR}/chase-header.cmake")
-include("${CMAKE_CURRENT_LIST_DIR}/chase-seq.cmake")
-include("${CMAKE_CURRENT_LIST_DIR}/chase-mpi.cmake")
-include("${CMAKE_CURRENT_LIST_DIR}/chase-c.cmake")
-include("${CMAKE_CURRENT_LIST_DIR}/chase-f.cmake")
-
+include("${CMAKE_CURRENT_LIST_DIR}/chaseTargets.cmake")
 check_required_components("@PROJECT_NAME@")
