--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required( VERSION 3.8 )
 
 project( ChASE LANGUAGES C CXX VERSION 1.3.0 )
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
 # ## algorithm ##
 
 set(CMAKE_CXX_STANDARD 17)
@@ -132,4 +132,5 @@ install(
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/ChASE
 )
 
-
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/cmake/modules
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/ChASE)
