--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -7,5 +7,8 @@ include(CMakeFindDependencyMacro)
 #find_dependency(LAPACK REQUIRED)
 #find_dependency(MPI)
 
+# Add the custom FindModules directory to the module path
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/modules")
+
 include("${CMAKE_CURRENT_LIST_DIR}/chaseTargets.cmake")
 check_required_components("@PROJECT_NAME@")
