--- a/grid/CMakeLists.txt
+++ b/grid/CMakeLists.txt
@@ -28,8 +28,7 @@ if(NCCL_FOUND)
                                                 $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
                                                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/grid>")
                                                 
-    target_link_libraries(mpi_grid_nccl INTERFACE ${NCCL_LIBRARIES})
-    #target_include_directories( mpi_grid_nccl INTERFACE ${NCCL_INCLUDE_DIRS})
+    target_link_libraries(mpi_grid_nccl INTERFACE NCCL::NCCL)
     target_compile_definitions( mpi_grid_nccl INTERFACE "-DHAS_NCCL")
 
     install(TARGETS mpi_grid_nccl
