--- a/tests/linalg/internal/CMakeLists.txt
+++ b/tests/linalg/internal/CMakeLists.txt
@@ -9,6 +9,10 @@ if(TARGET chase_cuda)
 add_subdirectory(cuda)
 endif()
 
+if(TARGET linalg_internal_cuda_mpi)
+add_subdirectory(cuda_aware_mpi)
+endif()	
+
 if(TARGET chase_nccl)
 add_subdirectory(nccl)
 endif()
