--- a/Impl/CMakeLists.txt
+++ b/Impl/CMakeLists.txt
@@ -8,6 +8,10 @@ if(TARGET linalg_internal_cuda)
 add_subdirectory(cuda)
 endif()
 
+if(TARGET linalg_internal_cuda_mpi)
+add_subdirectory(cuda_aware_mpi)
+endif()
+
 if(TARGET mpi_grid_nccl)
 add_subdirectory(nccl)
 endif()
