--- a/Impl/CMakeLists.txt
+++ b/Impl/CMakeLists.txt
@@ -1,17 +1,13 @@
-add_subdirectory(cpu)
+add_subdirectory(chase_cpu)
 
 if(TARGET linalg_internal_mpi)
-add_subdirectory(mpi)
+add_subdirectory(pchase_cpu)
 endif()
 
 if(TARGET linalg_internal_cuda)
-add_subdirectory(cuda)
+add_subdirectory(chase_gpu)
 endif()
 
 if(TARGET linalg_internal_cuda_mpi)
-add_subdirectory(cuda_aware_mpi)
-endif()
-
-if(TARGET mpi_grid_nccl)
-add_subdirectory(nccl)
+add_subdirectory(pchase_gpu)
 endif()
