--- a/Impl/chase_gpu/CMakeLists.txt
+++ b/Impl/chase_gpu/CMakeLists.txt
@@ -13,7 +13,7 @@ target_link_libraries(chase_gpu
 
 target_include_directories(chase_gpu INTERFACE 
                                                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-                                               "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/Impl/cuda>")
+                                               "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/Impl/chase_gpu>")
 
 target_compile_definitions(chase_gpu INTERFACE NO_MPI=1 HAS_CUDA=1)
 
