--- a/examples/0_hello_world/CMakeLists.txt
+++ b/examples/0_hello_world/CMakeLists.txt
@@ -1,9 +1,9 @@
-if(TARGET chase_mpi)
+if(TARGET pchase_cpu)
 add_executable( "0_hello_world.exe" "0_hello_world.cpp")
-target_link_libraries( "0_hello_world.exe" PRIVATE chase_mpi )
+target_link_libraries( "0_hello_world.exe" PRIVATE pchase_cpu )
 endif()
 
-if(TARGET chase_nccl)
+if(TARGET pchase_gpu)
 add_executable( "0_hello_world_nccl.exe" "0_hello_world.cpp")
-target_link_libraries( "0_hello_world_nccl.exe" PRIVATE chase_nccl )
+target_link_libraries( "0_hello_world_nccl.exe" PRIVATE pchase_gpu )
 endif()
