--- a/tests/linalg/internal/CMakeLists.txt
+++ b/tests/linalg/internal/CMakeLists.txt
@@ -1,11 +1,11 @@
 file(COPY QR_matrices DESTINATION ${CMAKE_BINARY_DIR}/tests/linalg/internal)
 
 add_subdirectory(cpu)
-if(TARGET chase_mpi)
+if(TARGET pchase_cpu)
 add_subdirectory(mpi)
 endif()
 
-if(TARGET chase_cuda)
+if(TARGET chase_gpu)
 add_subdirectory(cuda)
 endif()
 
@@ -13,6 +13,6 @@ if(TARGET linalg_internal_cuda_mpi)
 add_subdirectory(cuda_aware_mpi)
 endif()	
 
-if(TARGET chase_nccl)
+if(TARGET linalg_internal_nccl)
 add_subdirectory(nccl)
 endif()
