--- a/tests/linalg/internal/cuda_aware_mpi/CMakeLists.txt
+++ b/tests/linalg/internal/cuda_aware_mpi/CMakeLists.txt
@@ -1,7 +1,7 @@
-setup_test(HEMMGPUDistTest hemm.cpp LIBRARIES chase_cuda_mpi)
-setup_test(CholQRGPUDistTest cholqr.cpp LIBRARIES chase_cuda_mpi)
-setup_test(LanczosGPUDistTest lanczos.cpp LIBRARIES chase_cuda_mpi)
-setup_test(RayleighRitzGPUDistTest rayleighRitz.cpp LIBRARIES chase_cuda_mpi)
-setup_test(ResidualsGPUDistTest residuals.cpp LIBRARIES chase_cuda_mpi)
-setup_test(shiftDiagonalGPUDistTest shiftDiagonal.cpp LIBRARIES chase_cuda_mpi)
-setup_test(symOrHermGPU2DistTest symOrHerm.cpp LIBRARIES chase_cuda_mpi)
+setup_test(HEMMGPUDistTest hemm.cpp LIBRARIES pchase_gpu)
+setup_test(CholQRGPUDistTest cholqr.cpp LIBRARIES pchase_gpu)
+setup_test(LanczosGPUDistTest lanczos.cpp LIBRARIES pchase_gpu)
+setup_test(RayleighRitzGPUDistTest rayleighRitz.cpp LIBRARIES pchase_gpu)
+setup_test(ResidualsGPUDistTest residuals.cpp LIBRARIES pchase_gpu)
+setup_test(shiftDiagonalGPUDistTest shiftDiagonal.cpp LIBRARIES pchase_gpu)
+setup_test(symOrHermGPU2DistTest symOrHerm.cpp LIBRARIES pchase_gpu)
