--- a/tests/linalg/internal/mpi/CMakeLists.txt
+++ b/tests/linalg/internal/mpi/CMakeLists.txt
@@ -1,7 +1,7 @@
-setup_test(HEMMCPUDistTest hemm.cpp LIBRARIES chase_mpi)
-setup_test(CholQRCPUDistTest cholqr.cpp LIBRARIES chase_mpi)
-setup_test(RayleighRitzCPUDistTest rayleighRitz.cpp LIBRARIES chase_mpi)
-setup_test(ResidualsCPUDistTest residuals.cpp LIBRARIES chase_mpi)
-setup_test(LanczosCPUDistTest lanczos.cpp LIBRARIES chase_mpi)
-setup_test(shiftDiagonalCPUDistTest shiftDiagonal.cpp LIBRARIES chase_mpi)
-setup_test(symOrHermCPUDistTest symOrHerm.cpp LIBRARIES chase_mpi)
+setup_test(HEMMCPUDistTest hemm.cpp LIBRARIES pchase_cpu)
+setup_test(CholQRCPUDistTest cholqr.cpp LIBRARIES pchase_cpu)
+setup_test(RayleighRitzCPUDistTest rayleighRitz.cpp LIBRARIES pchase_cpu)
+setup_test(ResidualsCPUDistTest residuals.cpp LIBRARIES pchase_cpu)
+setup_test(LanczosCPUDistTest lanczos.cpp LIBRARIES pchase_cpu)
+setup_test(shiftDiagonalCPUDistTest shiftDiagonal.cpp LIBRARIES pchase_cpu)
+setup_test(symOrHermCPUDistTest symOrHerm.cpp LIBRARIES pchase_cpu)
