--- a/Impl/pchase_gpu/CMakeLists.txt
+++ b/Impl/pchase_gpu/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(chase_nccl INTERFACE)
-target_link_libraries(chase_nccl 
+add_library(pchase_gpu INTERFACE)
+target_link_libraries(pchase_gpu 
                       INTERFACE 
                               chase_algorithm 
                               blaspp 
@@ -9,31 +9,38 @@ target_link_libraries(chase_nccl
                               linalg_internal_cpu 
                               linalg_internal_mpi 
                               linalg_internal_cuda
+                              linalg_internal_cuda_mpi
                               linalg_internal_nccl                              
                               mpi_grid_nccl 
                               distMatrix_gpu)
 
-target_include_directories(chase_nccl INTERFACE 
+if(TARGET mpi_grid_nccl)
+target_link_libraries(pchase_gpu 
+                      INTERFACE 
+                              linalg_internal_nccl                              
+                              mpi_grid_nccl)
+endif()
+
+target_include_directories(pchase_gpu INTERFACE 
                                                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
                                                $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/Impl>
-                                               "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/Impl/nccl>"
+                                               "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/Impl/pchase_gpu>"
                                                "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/config>")
 
-target_compile_definitions(chase_nccl INTERFACE NO_MPI=0)
+target_compile_definitions(pchase_gpu INTERFACE NO_MPI=0)
 
 if(CHASE_ENABLE_MPI_IO)
-    target_compile_definitions( chase_nccl INTERFACE
+    target_compile_definitions( pchase_gpu INTERFACE
 	    "-DUSE_MPI_IO"
 	)
 endif()
 
 if(TARGET scalapackpp)
-  message("ScaLAPACK is enabled in ChASE-NCCL")
-  target_link_libraries(chase_nccl INTERFACE scalapackpp)
-  target_compile_definitions(chase_nccl INTERFACE HAS_SCALAPACK=1 )
+  target_link_libraries(pchase_gpu INTERFACE scalapackpp)
+  target_compile_definitions(pchase_gpu INTERFACE HAS_SCALAPACK=1 )
 endif()
 
-install(TARGETS chase_nccl
+install(TARGETS pchase_gpu
   EXPORT chase_targets
   INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
